--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,33 +1,30 @@
 cmake_minimum_required(VERSION 3.10)
-project(MyProject)
+project(DeribitTradingSystem)
 
-# Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Find Boost
+# Find required packages
 find_package(Boost REQUIRED COMPONENTS system thread)
+find_package(OpenSSL REQUIRED)
+find_package(nlohmann_json REQUIRED)
 
-# Include directories for Boost
-if(Boost_FOUND)
-    include_directories(${Boost_INCLUDE_DIRS})
-endif()
-
-# Add dependencies
-find_package(spdlog REQUIRED)
-find_package(fmt REQUIRED)
-
-# Add nlohmann/json (header-only library)
-set(JSON_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/json/include")
-include_directories(${JSON_INCLUDE_DIR})
+# Add include directories (more explicit)
+include_directories(
+    ${CMAKE_SOURCE_DIR}/include
+    ${Boost_INCLUDE_DIRS}
+    ${OPENSSL_INCLUDE_DIR}
+)
 
 # Add executable
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(deribit_trader 
+    src/main.cpp
+    src/websocket/websocket_client.cpp
+)
 
 # Link libraries
-target_link_libraries(${PROJECT_NAME}
-    Boost::system
-    Boost::thread
-    spdlog::spdlog
-    fmt::fmt
+target_link_libraries(deribit_trader 
+    ${Boost_LIBRARIES}
+    OpenSSL::SSL
+    OpenSSL::Crypto
+    nlohmann_json::nlohmann_json
 )
